<resources>
    <!-- Common -->
    <string name="app_name">NEO Android App</string>
    <string name="app_name_short">NEO</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>

    <!-- Units -->
    <string name="unitsVoltage">V</string>
    <string name="unitsCurrent">A</string>
    <string name="unitsAmpereHour">Ah</string>
    <string name="unitsByte">b</string>

    <!-- activity bluetooth -->
    <string name="bt_Headline">Select NEO charger:</string>
    <string name="bt_connectingSpinnerHeadline">Please wait</string>
    <string name="bt_connectingSpinnerMessage">Connecting to NEO charger</string>

    <!-- activity service menu -->
    <string name="service_Headline">Service Menu</string>
    <string name="service_errorHeadline">Error status:</string>
    <string name="service_error_noError">No errors</string>
    <string name="service_error_misc">Miscellaneous error</string>
    <string name="service_error_reversePolarity">Reverse polarity</string>
    <string name="service_AmpereHour">Ah Previous Cycle:</string>
    <string name="service_voltage">Voltage:</string>
    <string name="service_Current">Current:</string>
    <string name="service_ProgramStep">Step:</string>
    <string name="service_BtnReadLog">Read Log</string>
    <string name="service_BtnProgram">Program</string>
    <string name="service_BtnLogCounters">Log Counters</string>

    <!-- password dialog -->
    <string name="passwordDialog_Headline">Authorization required</string>
    <string name="passwordDialog_Hint">Enter service password</string>
    <string name="passwordDialog_HintWrongPassword">Wrong service password</string>

    <!-- Progress Dialog -->
    <string name="progressDialog_Headline">Please wait</string>
    <string name="progressDialog_Log">Log</string>
    <string name="progressDialog_LogSize">Size:</string>

    <!-- Log Counters Dialog -->
    <string name="logCountersDialog_BtnResetCounters">Reset Counters</string>
    <string name="logCountersDialog_LogCountersHeadline">Log Counters</string>
    <string name="logCountersDialog_LogCounters_Charges">Charges:</string>
    <string name="logCountersDialog_LogCounters_Errors">Errors:</string>
    <string name="logCountersDialog_LogCounters_DeptDischarges">Deep:</string>

    <!-- Program Dialog -->
    <string name="programDialog_ProgramName">Charging Program:</string>
    <string name="programDialog_BtnProgramWrite">Write Program</string>

    <!-- Info Dialog -->
    <string name="infoDialog_Headline">Dealership info</string>
    <string name="infoDialog_NameHint">Enter dealership name</string>
    <string name="infoDialog_PhoneHint">Enter dealership phone number</string>
    <string name="infoDialog_WebsiteHint">Enter dealership website URL</string>
</resources>
