<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/content_padding_top"
    android:paddingStart="@dimen/content_padding_left"
    android:paddingEnd="@dimen/content_padding_right"
    android:paddingBottom="@dimen/content_padding_bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/title_headline"
        android:text="@string/infoDialog_Headline"/>
    <EditText
        android:id="@+id/infoDialog_Name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/content_spacing"
        android:inputType="text"
        android:hint="@string/infoDialog_NameHint"/>
    <EditText
        android:id="@+id/infoDialog_Phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/content_spacing"
        android:inputType="phone"
        android:hint="@string/infoDialog_PhoneHint"/>
    <EditText
        android:id="@+id/infoDialog_Website"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/content_spacing"
        android:inputType="textUri"
        android:hint="@string/infoDialog_WebsiteHint"/>
</LinearLayout>