<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/content_padding_top"
    android:paddingStart="@dimen/content_padding_left"
    android:paddingEnd="@dimen/content_padding_right"
    android:paddingBottom="@dimen/content_padding_bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/title_headline"
        android:text="@string/logCountersDialog_LogCountersHeadline"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_spacing"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_tableHeader"
                android:gravity="center"
                android:text="@string/logCountersDialog_LogCounters_Charges"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/txtViewLogCountersCharges"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_text"
                android:gravity="center"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_tableHeader"
                android:gravity="center"
                android:text="@string/logCountersDialog_LogCounters_Errors"/>
            <TextView
                android:id="@+id/txtViewLogCountersErrors"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_text"
                android:gravity="center"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_tableHeader"
                android:gravity="center"
                android:text="@string/logCountersDialog_LogCounters_DeptDischarges"/>
            <TextView
                android:id="@+id/txtViewLogCountersDepthDischarges"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/content_text"
                android:gravity="center"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnLogCountersReset"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnShortHeight"
        android:text="@string/logCountersDialog_BtnResetCounters"
        android:layout_gravity="center"/>
</LinearLayout>